# postgres-interface

./: .gitignore  CONTEXT.md  flake.nix  postgres-interface.cabal
docs/adr/: 0001-wire-protocol-implemented-from-scratch.md  0002-anytable-existential-over-pre-serialised-rows.md
example/: Main.hs
src/Database/PostgresInterface/: K8s.hs  Queryable.hs  Serve.hs  Table.hs
src/Database/PostgresInterface/Protocol/: Catalog.hs  Decoder.hs  Encoder.hs  Messages.hs  Server.hs
src/Database/PostgresInterface/Queryable/: Generic.hs
src/Database/PostgresInterface/Sql/: Parse.hs  Plan.hs
src/Database/PostgresInterface/Table/: Dynamic.hs  Pushdown.hs
test/: EndToEndSpec.hs  K8sSpec.hs  Main.hs  QueryableSpec.hs  TableSpec.hs
test/Protocol/: IntegrationSpec.hs  MessagesSpec.hs
test/Sql/: PlanSpec.hs  SelectSupportSpec.hs
test/Table/: DynamicSpec.hs
