cabal-version:      3.0
name:               postgres-interface
version:            0.1.0.0
synopsis:           Expose Haskell functions as a PostgreSQL-compatible server
description:
  A library for building PostgreSQL wire-protocol compatible servers backed
  by Haskell functions. Any PostgreSQL client (Grafana, psql, postgresql-simple)
  can query your Haskell data without knowing it is not a real PostgreSQL server.
license:            MIT
author:             Lorcan McDonald
maintainer:         lorcan@example.com
build-type:         Simple

common warnings
  ghc-options: -Wall

library
  import:           warnings
  hs-source-dirs:   src
  default-language: GHC2021
  exposed-modules:
    Database.PostgresInterface.Protocol.Messages
    Database.PostgresInterface.Protocol.Encoder
    Database.PostgresInterface.Protocol.Decoder
    Database.PostgresInterface.Protocol.Server
    Database.PostgresInterface.Protocol.Catalog
    Database.PostgresInterface.Sql.Parse
    Database.PostgresInterface.Sql.Plan
    Database.PostgresInterface.Queryable
    Database.PostgresInterface.Queryable.Generic
    Database.PostgresInterface.Table
    Database.PostgresInterface.Table.Pushdown
    Database.PostgresInterface.Serve
  build-depends:
      base              ^>=4.18 || ^>=4.19 || ^>=4.20
    , bytestring        >= 0.11
    , text              >= 2.0
    , binary            >= 0.8
    , network           >= 3.1
    , conduit           >= 1.3
    , conduit-extra     >= 1.3
    , simple-sql-parser >= 0.7
    , time              >= 1.12
    , scientific        >= 0.3
    , int-cast          >= 0.2

executable example
  import:           warnings
  hs-source-dirs:   example
  main-is:          Main.hs
  default-language: GHC2021
  build-depends:
      base
    , postgres-interface
    , text
    , time
    , conduit

test-suite postgres-interface-test
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  default-language: GHC2021
  other-modules:
    Protocol.MessagesSpec
    Protocol.IntegrationSpec
    Sql.PlanSpec
    QueryableSpec
    EndToEndSpec
    TableSpec
  build-depends:
      base
    , postgres-interface
    , bytestring
    , text
    , tasty              >= 1.4
    , tasty-hunit        >= 0.10
    , tasty-quickcheck   >= 0.10
    , QuickCheck         >= 2.14
    , postgresql-simple  >= 0.7
    , async              >= 2.2
    , network
    , time
    , scientific
    , conduit
    , binary
